# aqua-tracekit

./: .gitignore  Cargo.toml  LICENSE  README.md  development_setup.md  pyproject.toml
.github/workflows/: release.yml
aqua_tracekit/: __init__.py  _core.pyi  schema.py
docs/: SALMODUCK_TRACEABILITY_MODEL.md
examples/: README.md
examples/example_01_basics/: example_01_basics.ipynb
examples/example_01_basics/data/: mortality.csv  segments.csv
examples/example_02_split/: example_02_split.ipynb
examples/example_02_split/data/: containers.csv  temperature.csv  transfers.csv
examples/example_03_mix/data/: containers.csv  orgunits.csv
examples/example_04_aggregations/data/: transfers.csv
examples/example_06_trace_forward/data/: segments.csv
examples/example_1_basics/: example_1_basics.ipynb
examples/example_1_basics/data/: containers.csv  mortality.csv  populations.csv
examples/example_20_trace_middle/: example_20_trace_middle.ipynb
examples/example_20_trace_middle/data/: containers.csv  mortality.csv  populations.csv  segments.csv  transfers.csv
examples/example_2_split/: example_2_split.ipynb
examples/example_2_split/data/: orgunits.csv  populations.csv  segments.csv  transfers.csv
examples/example_3_mix/: example_3_mix.ipynb
examples/example_3_mix/data/: populations.csv  transfers.csv
examples/example_4_aggregations/: example_4_aggregations.ipynb
examples/example_6_trace_forward/: example_6_trace_forward.ipynb
src/: aggregation.rs  dag_tracer.rs  error.rs  lib.rs  model.rs  schema.rs  sdt_chart.js  time_axis.js  visualization.rs
(+2 files in other folders)
