[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aqua-tracekit"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["polars>=1.38,<2.0"]
license = {text = "MIT"}
readme = "README.md"

[project.optional-dependencies]
examples = ["matplotlib>=3.10", "ipykernel>=7.0", "pandas>=2.0", "pyarrow>=14.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "aqua_tracekit._core"  
include = ["aqua_tracekit/*.pyi"]